sip4 (4.15.5-1) UNRELEASED; urgency=low

  * New upstream release.
  * Bump API version to 11.0.

 -- Dmitry Shachnev <mitya57@gmail.com>  Tue, 18 Mar 2014 10:40:51 +0400

sip4 (4.15.4-1) unstable; urgency=low

  * New upstream bugfix release.
  * Adjust python-qwt5-qt4 and python-qwt3d-qt4 breaks, only the newly
    uploaded versions work with new sip.

 -- Dmitry Shachnev <mitya57@gmail.com>  Wed, 08 Jan 2014 19:36:26 +0400

sip4 (4.15.3-1) unstable; urgency=low

  [ Dmitry Shachnev ]
  * New upstream release.
  * Add myself to Uploaders.

  [ Scott Kitterman ]
  * Bump standards version to 3.9.5 without further change.

 -- Dmitry Shachnev <mitya57@gmail.com>  Wed, 06 Nov 2013 07:34:12 +0400

sip4 (4.15.2-2) unstable; urgency=low

  * Upload to unstable
  * Revert workaround for #723070, since it's addressed in dh-python now

 -- Scott Kitterman <scott@kitterman.com>  Fri, 11 Oct 2013 19:26:33 -0400

sip4 (4.15.2-1) experimental; urgency=low

  * New upstream release
    - Contains the sip4 part of the fix for recent pykde4 breakage
  * Temporarily hard code python3 Depends in python3-sip-dev to work around
    breakage in dh-python (See #723070)

 -- Scott Kitterman <scott@kitterman.com>  Mon, 16 Sep 2013 00:45:10 -0400

sip4 (4.15.1-1) experimental; urgency=low

  [ Dmitry Shachnev ]
  * Call dh_sphinxdoc after dh_installdocs, to fix build failure with
    new debhelper versions.
  * Remove wrong debian/python-sip-doc.docs, we install docs manually.
  * Don't hardcode depends on libjs-jquery and libjs-underscore,
    ${sphinxdoc:Depends} takes care of that.

  [ Scott Kitterman ]
  * New upstream release

 -- Scott Kitterman <scott@kitterman.com>  Tue, 27 Aug 2013 22:18:05 -0400

sip4 (4.15-1) experimental; urgency=low

  * New upstream feature release
    - Add 10.1 to sip-api and sip-py3api

 -- Scott Kitterman <scott@kitterman.com>  Wed, 21 Aug 2013 17:19:27 -0400

sip4 (4.14.7-4) unstable; urgency=medium
