@@ -2,6 +2,7 @@ sip4 (4.15.5-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Bump API version to 11.0.
+  * debian/rules: Drop Python 2.5 compatibility code.
 
  -- Dmitry Shachnev <mitya57@gmail.com>  Tue, 18 Mar 2014 10:40:51 +0400
 
